# hear-me-out

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.test  pyproject.toml  transcriptions.db
backend/src/: main.py
backend/src/transcriber/: __init__.py  service.py
backend/src/transcription/: __init__.py  repository.py  service.py
backend/tests/: conftest.py  test_main.py
frontend/: Dockerfile  Dockerfile.test  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.test.js
frontend/src/services/: api.js
